# dcs-binding-visualizer

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: linux-input-devices.md  plan.md
mappings/: virpil-rotor-tcs-dual-sf.yaml  winwing-orion2-f16ex-stick.yaml  winwing-orion2-f18-stick.yaml  winwing-orion2-f18-throttle.yaml
src/dcs_bindings/: __init__.py  abbreviations.py  aircraft_scanner.py  cli.py  config.py  detection_cache.py  detector.py  layout.py  lua_parser.py  mapping.py  models.py  ocr.py  renderer.py  setup_wizard.py
