[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcs-binding-visualizer"
version = "0.1.0"
description = "Generate visual reference cards for DCS World joystick bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pytesseract>=0.3.10",
    "slpp>=1.2",
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.scripts]
dcs-bindings = "dcs_bindings.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
